# icic-stats-workshop

./: .flake8  .gitignore  README.rst  pyproject.toml
notes/: _config.yml  _toc.yml  index.md  test.md
prelim-exercise/: .gitignore  task.md  task.rmd
